fixed spacing in tweets list

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,3 +1,12 @@
 h1 {
   text-align: center;
 }
+ul { 
+  list-style-type: none; 
+}
+#tweet-listing li{
+  margin-bottom: 30px;
+}
+#tweet-listing li:first-child {
+  margin-top: 30px;
+}
